force-app/main/default/objects/Online_claim__c/Online_claim__c.object-meta.xml
<CustomObject>
    <label>Online claim</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Online claim Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Online claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>