force-app/main/default/objects/Online_claim__c/fields/Address_Where_Worked_City__c.field-meta.xml
<CustomField>
    <fullName>Address_Where_Worked_City__c</fullName>
    <label>Address Where Worked City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>