force-app/main/default/objects/Online_claim__c/fields/Any_Paycheck_bounce__c.field-meta.xml
<CustomField>
    <fullName>Any_Paycheck_bounce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any Paycheck bounce</label>
    <type>Checkbox</type>
</CustomField>