force-app/main/default/objects/Online_claim__c/fields/Are_other_employees_filing_a_claim_s__c.field-meta.xml
<CustomField>
    <fullName>Are_other_employees_filing_a_claim_s__c</fullName>
    <label>Are other employees filing a claim(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>