force-app/main/default/objects/Online_claim__c/fields/Are_you_a_registered_nurse__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_registered_nurse__c</fullName>
    <label>Are you a registered nurse?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>