force-app/main/default/objects/Online_claim__c/fields/Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Case_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Management</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Online claims</relationshipLabel>
    <relationshipName>Online_claims</relationshipName>
    <type>Lookup</type>
</CustomField>