force-app/main/default/objects/Online_claim__c/fields/Check_replaced__c.field-meta.xml
<CustomField>
    <fullName>Check_replaced__c</fullName>
    <inlineHelpText>Was the check replaced?</inlineHelpText>
    <label>Check replaced?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>