force-app/main/default/objects/Online_claim__c/fields/Check_replaced_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_replaced_Date__c</fullName>
    <inlineHelpText>When was the check replaced?</inlineHelpText>
    <label>Check replaced Date</label>
    <type>Date</type>
</CustomField>