force-app/main/default/objects/Online_claim__c/fields/COVID_19_Claim__c.field-meta.xml
<CustomField>
    <fullName>COVID_19_Claim__c</fullName>
    <label>COVID-19 Claim</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>