force-app/main/default/objects/Online_claim__c/fields/Covid_Reason__c.field-meta.xml
<CustomField>
    <fullName>Covid_Reason__c</fullName>
    <label>Covid Reason</label>
    <length>150</length>
    <type>Text</type>
</CustomField>