force-app/main/default/objects/Online_claim__c/fields/Date_employer_provided_the_statement__c.field-meta.xml
<CustomField>
    <fullName>Date_employer_provided_the_statement__c</fullName>
    <label>Date employer provided the statement</label>
    <type>Date</type>
</CustomField>