force-app/main/default/objects/Online_claim__c/fields/Date_of_written_request__c.field-meta.xml
<CustomField>
    <fullName>Date_of_written_request__c</fullName>
    <label>Date of written request</label>
    <type>Date</type>
</CustomField>