force-app/main/default/objects/Online_claim__c/fields/Defined_workday_End_time__c.field-meta.xml
<CustomField>
    <fullName>Defined_workday_End_time__c</fullName>
    <label>Defined workday End time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>