force-app/main/default/objects/Online_claim__c/fields/Defined_workday_start_time__c.field-meta.xml
<CustomField>
    <fullName>Defined_workday_start_time__c</fullName>
    <label>Defined workday start time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>