force-app/main/default/objects/Online_claim__c/fields/Did_you_missed_Days_of_work__c.field-meta.xml
<CustomField>
    <fullName>Did_you_missed_Days_of_work__c</fullName>
    <label>Did you missed Days of work</label>
    <length>50</length>
    <type>Text</type>
</CustomField>