force-app/main/default/objects/Online_claim__c/fields/Did_you_paid_heat_recovery__c.field-meta.xml
<CustomField>
    <fullName>Did_you_paid_heat_recovery__c</fullName>
    <label>Did you paid heat recovery ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>