force-app/main/default/objects/Online_claim__c/fields/Did_you_receive_heat_recovery_periods__c.field-meta.xml
<CustomField>
    <fullName>Did_you_receive_heat_recovery_periods__c</fullName>
    <label>Did you receive heat recovery periods?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>