force-app/main/default/objects/Online_claim__c/fields/Did_you_work_in_the_home__c.field-meta.xml
<CustomField>
    <fullName>Did_you_work_in_the_home__c</fullName>
    <label>Did you work in the home?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>