force-app/main/default/objects/Online_claim__c/fields/Employee_Job_Duties__c.field-meta.xml
<CustomField>
    <fullName>Employee_Job_Duties__c</fullName>
    <label>Employee Job Duties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>