force-app/main/default/objects/Online_claim__c/fields/Employer_Changed_Business__c.field-meta.xml
<CustomField>
    <fullName>Employer_Changed_Business__c</fullName>
    <label>Did your employer's business change</label>
    <length>255</length>
    <type>Text</type>
</CustomField>