force-app/main/default/objects/Online_claim__c/fields/Employer_Changed_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Changed_Name__c</fullName>
    <label>Did employer change name after your empl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>