force-app/main/default/objects/Online_claim__c/fields/Employer_defined_workweek__c.field-meta.xml
<CustomField>
    <fullName>Employer_defined_workweek__c</fullName>
    <label>Employer-defined workweek</label>
    <length>255</length>
    <type>Text</type>
</CustomField>