force-app/main/default/objects/Online_claim__c/fields/Employer_follows_the_standard_workday__c.field-meta.xml
<CustomField>
    <fullName>Employer_follows_the_standard_workday__c</fullName>
    <label>Employer follows the standard workday</label>
    <type>TextArea</type>
</CustomField>