force-app/main/default/objects/Online_claim__c/fields/Employer_follows_the_standard_workweek__c.field-meta.xml
<CustomField>
    <fullName>Employer_follows_the_standard_workweek__c</fullName>
    <label>Employer follows the standard workweek</label>
    <length>255</length>
    <type>Text</type>
</CustomField>