force-app/main/default/objects/Online_claim__c/fields/Employer_never_provided_the_statement__c.field-meta.xml
<CustomField>
    <fullName>Employer_never_provided_the_statement__c</fullName>
    <label>Employer never provided the statement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>