force-app/main/default/objects/Online_claim__c/fields/Employer_selling_Assets_or_in_Bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>Employer_selling_Assets_or_in_Bankruptcy__c</fullName>
    <label>Employer selling Assets or in Bankruptcy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>