force-app/main/default/objects/Online_claim__c/fields/Employer_Still_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Employer_Still_in_Business__c</fullName>
    <label>Employer Still in Business?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>