force-app/main/default/objects/Online_claim__c/fields/ES_Still_Working_for_Employer__c.field-meta.xml
<CustomField>
    <fullName>ES_Still_Working_for_Employer__c</fullName>
    <label>(ES)Still Working for Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>