force-app/main/default/objects/Online_claim__c/fields/Filed_a_Retaliation_complaint__c.field-meta.xml
<CustomField>
    <fullName>Filed_a_Retaliation_complaint__c</fullName>
    <label>Filed a Retaliation complaint?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>