force-app/main/default/objects/Online_claim__c/fields/Holidays_Closed__c.field-meta.xml
<CustomField>
    <fullName>Holidays_Closed__c</fullName>
    <label>Holidays Closed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>