force-app/main/default/objects/Online_claim__c/fields/Holidays_you_did_not_work__c.field-meta.xml
<CustomField>
    <fullName>Holidays_you_did_not_work__c</fullName>
    <label>Holidays you did not work</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>