force-app/main/default/objects/Online_claim__c/fields/Hourly_Amount_Promised__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Amount_Promised__c</fullName>
    <label>Hourly Amount Promised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>