force-app/main/default/objects/Online_claim__c/fields/Hours_recorded_by__c.field-meta.xml
<CustomField>
    <fullName>Hours_recorded_by__c</fullName>
    <label>Hours recorded by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>