force-app/main/default/objects/Online_claim__c/fields/how_this_person_may_be_responsible__c.field-meta.xml
<CustomField>
    <fullName>how_this_person_may_be_responsible__c</fullName>
    <label>how this person may be responsible</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>