force-app/main/default/objects/Online_claim__c/fields/How_were_your_wages_paid__c.field-meta.xml
<CustomField>
    <fullName>How_were_your_wages_paid__c</fullName>
    <label>How were your wages paid?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>