force-app/main/default/objects/Online_claim__c/fields/Industry_Detail__c.field-meta.xml
<CustomField>
    <fullName>Industry_Detail__c</fullName>
    <label>Industry Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>