force-app/main/default/objects/Online_claim__c/fields/Live_in_the_home_where_you_worked__c.field-meta.xml
<CustomField>
    <fullName>Live_in_the_home_where_you_worked__c</fullName>
    <label>Live in the home where you worked?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>