force-app/main/default/objects/Online_claim__c/fields/Missed_Work_Reason__c.field-meta.xml
<CustomField>
    <fullName>Missed_Work_Reason__c</fullName>
    <label>Missed Work Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>