force-app/main/default/objects/Online_claim__c/fields/Move_to_successor_section__c.field-meta.xml
<CustomField>
    <fullName>Move_to_successor_section__c</fullName>
    <label>Move to successor section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>