force-app/main/default/objects/Online_claim__c/fields/Name_of_person_who_hired_you__c.field-meta.xml
<CustomField>
    <fullName>Name_of_person_who_hired_you__c</fullName>
    <label>Name of person who hired you</label>
    <length>255</length>
    <type>Text</type>
</CustomField>