force-app/main/default/objects/Online_claim__c/fields/Number_of_days_missed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days_missed__c</fullName>
    <label>Number of days missed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>