force-app/main/default/objects/Online_claim__c/fields/Other_Holidays__c.field-meta.xml
<CustomField>
    <fullName>Other_Holidays__c</fullName>
    <label>Other Holidays</label>
    <length>255</length>
    <type>Text</type>
</CustomField>