force-app/main/default/objects/Online_claim__c/fields/Other_Work_Approximate_Location__c.field-meta.xml
<CustomField>
    <fullName>Other_Work_Approximate_Location__c</fullName>
    <label>Other Work Approximate Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>