force-app/main/default/objects/Online_claim__c/fields/Other_work_Location_Phone__c.field-meta.xml
<CustomField>
    <fullName>Other_work_Location_Phone__c</fullName>
    <label>Other work Location Phone</label>
    <type>Phone</type>
</CustomField>