force-app/main/default/objects/Online_claim__c/fields/Ownership_Relation__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Relation__c</fullName>
    <label>Ownership Relation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>