force-app/main/default/objects/Online_claim__c/fields/Paid_by__c.field-meta.xml
<CustomField>
    <fullName>Paid_by__c</fullName>
    <label>Paid by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>