force-app/main/default/objects/Online_claim__c/fields/Pay_stub_available_for_sick_leave__c.field-meta.xml
<CustomField>
    <fullName>Pay_stub_available_for_sick_leave__c</fullName>
    <label>Pay stub available for sick leave</label>
    <length>255</length>
    <type>Text</type>
</CustomField>