force-app/main/default/objects/Online_claim__c/fields/Person_in_charge__c.field-meta.xml
<CustomField>
    <fullName>Person_in_charge__c</fullName>
    <label>Person in charge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>