force-app/main/default/objects/Online_claim__c/fields/Person_who_discharged_you__c.field-meta.xml
<CustomField>
    <fullName>Person_who_discharged_you__c</fullName>
    <label>Person who discharged you</label>
    <length>255</length>
    <type>Text</type>
</CustomField>