force-app/main/default/objects/Online_claim__c/fields/Piece_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Piece_Rate_Amount__c</fullName>
    <label>Piece Rate Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>