force-app/main/default/objects/Online_claim__c/fields/Piece_rate_paid__c.field-meta.xml
<CustomField>
    <fullName>Piece_rate_paid__c</fullName>
    <label>Piece rate paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>