force-app/main/default/objects/Online_claim__c/fields/Piece_Rate_Unit__c.field-meta.xml
<CustomField>
    <fullName>Piece_Rate_Unit__c</fullName>
    <label>Piece Rate Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>