force-app/main/default/objects/Online_claim__c/fields/Promised_Fixed_Salary_Amount__c.field-meta.xml
<CustomField>
    <fullName>Promised_Fixed_Salary_Amount__c</fullName>
    <label>Promised Fixed Salary Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>