force-app/main/default/objects/Online_claim__c/fields/Provided_Meal_Period__c.field-meta.xml
<CustomField>
    <fullName>Provided_Meal_Period__c</fullName>
    <label>Provided Meal Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>