force-app/main/default/objects/Online_claim__c/fields/Provided_Rest_Period__c.field-meta.xml
<CustomField>
    <fullName>Provided_Rest_Period__c</fullName>
    <label>Provided Rest Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>