force-app/main/default/objects/Online_claim__c/fields/Reason_for_missed_work__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_missed_work__c</fullName>
    <label>Reason for missed work</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>