force-app/main/default/objects/Online_claim__c/fields/Reason_for_no_rest_period__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_no_rest_period__c</fullName>
    <label>Reason for no rest period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>