force-app/main/default/objects/Online_claim__c/fields/Received_all_your_wages_owed__c.field-meta.xml
<CustomField>
    <fullName>Received_all_your_wages_owed__c</fullName>
    <inlineHelpText>Have you received all your wages owed to you?</inlineHelpText>
    <label>Received all your wages owed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>