force-app/main/default/objects/Online_claim__c/fields/Received_Itemized_Wage_Statements__c.field-meta.xml
<CustomField>
    <fullName>Received_Itemized_Wage_Statements__c</fullName>
    <label>Received Itemized Wage Statements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>