force-app/main/default/objects/Online_claim__c/fields/Received_Time_Cards__c.field-meta.xml
<CustomField>
    <fullName>Received_Time_Cards__c</fullName>
    <label>Received Time Cards</label>
    <length>255</length>
    <type>Text</type>
</CustomField>