force-app/main/default/objects/Online_claim__c/fields/Request_a_written_rate_of_compensation__c.field-meta.xml
<CustomField>
    <fullName>Request_a_written_rate_of_compensation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request a written rate of compensation</label>
    <type>Checkbox</type>
</CustomField>