force-app/main/default/objects/Online_claim__c/fields/Retaliation_Complaint_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Retaliation_Complaint_Case_Number__c</fullName>
    <label>Retaliation Complaint Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>