force-app/main/default/objects/Online_claim__c/fields/Retaliation_Complaint_Filed_Date__c.field-meta.xml
<CustomField>
    <fullName>Retaliation_Complaint_Filed_Date__c</fullName>
    <label>Retaliation Complaint Filed Date</label>
    <type>Date</type>
</CustomField>