force-app/main/default/objects/Online_claim__c/fields/Standard_Workweek__c.field-meta.xml
<CustomField>
    <fullName>Standard_Workweek__c</fullName>
    <label>Standard Workweek</label>
    <length>255</length>
    <type>Text</type>
</CustomField>