force-app/main/default/objects/Online_claim__c/fields/Sundays_worked_per_month__c.field-meta.xml
<CustomField>
    <fullName>Sundays_worked_per_month__c</fullName>
    <label>Sundays worked per month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>