force-app/main/default/objects/Online_claim__c/fields/Title_of_Person_in_Charge__c.field-meta.xml
<CustomField>
    <fullName>Title_of_Person_in_Charge__c</fullName>
    <label>Title of Person in Charge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>