force-app/main/default/objects/Online_claim__c/fields/Total_earned__c.field-meta.xml
<CustomField>
    <fullName>Total_earned__c</fullName>
    <label>Total earned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>