force-app/main/default/objects/Online_claim__c/fields/Type_of_Work_Performed__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Work_Performed__c</fullName>
    <label>Type of Work Performed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>