force-app/main/default/objects/Online_claim__c/fields/Union_contract_covering_your_employment__c.field-meta.xml
<CustomField>
    <fullName>Union_contract_covering_your_employment__c</fullName>
    <label>Union contract covering your employment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>