force-app/main/default/objects/Online_claim__c/fields/URL_address_for_Union_Contract__c.field-meta.xml
<CustomField>
    <fullName>URL_address_for_Union_Contract__c</fullName>
    <label>URL address for Union Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>