force-app/main/default/objects/Online_claim__c/fields/Wage_received_date__c.field-meta.xml
<CustomField>
    <fullName>Wage_received_date__c</fullName>
    <label>Wage received date</label>
    <type>Date</type>
</CustomField>