force-app/main/default/objects/Online_claim__c/fields/Wages_always_paid_on_the_payday__c.field-meta.xml
<CustomField>
    <fullName>Wages_always_paid_on_the_payday__c</fullName>
    <label>Wages always paid on the payday</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>