force-app/main/default/objects/Online_claim__c/fields/Were_you_sent_to_the_home_by_an_agency__c.field-meta.xml
<CustomField>
    <fullName>Were_you_sent_to_the_home_by_an_agency__c</fullName>
    <label>Were you sent to the home by an agency?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>