force-app/main/default/objects/Online_claim__c/fields/Were_you_working_as_a_farm_laborer__c.field-meta.xml
<CustomField>
    <fullName>Were_you_working_as_a_farm_laborer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Were you working as a farm laborer?</label>
    <type>Checkbox</type>
</CustomField>