force-app/main/default/objects/Online_claim__c/fields/Who_paid_you__c.field-meta.xml
<CustomField>
    <fullName>Who_paid_you__c</fullName>
    <label>Who paid you?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>