force-app/main/default/objects/Online_claim__c/fields/Who_recorded_your_work_hours__c.field-meta.xml
<CustomField>
    <fullName>Who_recorded_your_work_hours__c</fullName>
    <label>Who recorded your work hours?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>