force-app/main/default/objects/Online_claim__c/fields/who_told_you_to_sign_the_time_card__c.field-meta.xml
<CustomField>
    <fullName>who_told_you_to_sign_the_time_card__c</fullName>
    <label>who told you to sign the time card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>