force-app/main/default/objects/Online_claim__c/fields/Work_Address_Different__c.field-meta.xml
<CustomField>
    <fullName>Work_Address_Different__c</fullName>
    <label>Work Address Different?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>