force-app/main/default/objects/Online_claim__c/fields/Work_in_a_residential_care_facility__c.field-meta.xml
<CustomField>
    <fullName>Work_in_a_residential_care_facility__c</fullName>
    <label>Work in a residential care facility?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>