force-app/main/default/objects/Online_claim__c/fields/Work_Sched_Set_By__c.field-meta.xml
<CustomField>
    <fullName>Work_Sched_Set_By__c</fullName>
    <label>Work Sched Set By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>