force-app/main/default/objects/Online_claim__c/fields/Work_with_same_co_worker__c.field-meta.xml
<CustomField>
    <fullName>Work_with_same_co_worker__c</fullName>
    <inlineHelpText>Did you work with the same co-workers at this company name as the other company name?</inlineHelpText>
    <label>Work with same co-worker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>