force-app/main/default/objects/Online_claim__c/fields/Workday_Beginning_Time__c.field-meta.xml
<CustomField>
    <fullName>Workday_Beginning_Time__c</fullName>
    <label>Workday Beginning Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>