force-app/main/default/objects/Online_claim__c/fields/Written_Complain_Request__c.field-meta.xml
<CustomField>
    <fullName>Written_Complain_Request__c</fullName>
    <label>Written Complain Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>